# clinic

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  makefile  pyproject.toml  readme.md
api/: urls.py  viewsets.py
appointments/: managers.py  models.py
appointments/api/: serializers.py  viewsets.py
appointments/migrations/: 0001_initial.py
doctors/: admin.py  choices.py  models.py
doctors/api/: serializers.py  viewsets.py
doctors/migrations/: 0001_initial.py  0002_alter_doctor_license_number.py
main/: models.py  settings.py  urls.py  utils.py
