[tool.poetry]
name = "main"
version = "0.1.0"
description = ""
authors = ["burkay <bpehlivan235@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
Django = "^5.1.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
djangorestframework = "^3.15.2"


[tool.poetry.group.dev.dependencies]
django-extensions = "^3.2.3"
ipython = "^8.27.0"
ipdb = "^0.13.13"
ruff = "^0.6.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
